# ttHReco

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindPXL.cmake  FindROOT.cmake
core/: CMakeLists.txt
core/include/ttHReco/: core.h
core/include/ttHReco/core/: test.h
core/src/: test.cc
pkgconfig/: ttHReco.pc
share/: FindttHReco.cmake
test/: test.cc
